--- a/Frontend/src/app/components/path-chooser/path-chooser.component.html
+++ b/Frontend/src/app/components/path-chooser/path-chooser.component.html
@@ -4,11 +4,12 @@
             <mat-form-field floatLabel="always">
                 <mat-label>Microservices Path</mat-label>
                 <input matInput placeholder="C:/Your/Microservice/Path" formControlName="path">
-                <mat-error *ngIf="true">
-                    Please enter a valid email address
+                <mat-error *ngIf="this.pathFormControl.hasError('invalidPath')">
+                    Path is invalid or contains no microservices
                 </mat-error>
             </mat-form-field>
-            <button id="search-btn" type="submit" mat-raised-button color="primary" [disabled]="!pathChooserForm.valid">
+            <button id="search-btn" type="submit" mat-raised-button color="primary"
+                [disabled]="this.pathFormControl.hasError('required')">
                 <mat-icon>search</mat-icon>
             </button>
         </div>
