* Added microservices list and changed names * Added unsubscribe to observable

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -3,11 +3,10 @@
     <div id="microservices">
         <mat-card id="microservices-card">
             <div id="path-chooser-container">
-                <ms-path-chooser id="path-chooser" (pathSubmitted)="demo($event)">
-                </ms-path-chooser>
+                <ms-path-chooser id="path-chooser" (pathSubmitted)="demo($event)"></ms-path-chooser>
             </div>
-            <div id="microservice-checker-container">
-                <ms-microservice-checker id="microservice-checker"></ms-microservice-checker>
+            <div id="microservice-runner-container">
+                <ms-microservice-runner id="microservice-runner"></ms-microservice-runner>
             </div>
         </mat-card>
     </div>
