--- a/Frontend/src/app/app.component.scss
+++ b/Frontend/src/app/app.component.scss
@@ -12,7 +12,7 @@
     align-items: center;
 
         #microservices-card {
-            min-height: 70%;
+            height: 74%;
             width: 50%;
             display: grid;
             // grid-template: 20% 80% / 100%;
@@ -33,12 +33,12 @@
             }
         }
 
-        #microservice-checker-container{
+        #microservice-runner-container{
             display:flex;
             flex-direction: column;
             justify-content: center;
 
-            #microservice-checker{
+            #microservice-runner{
                 height: 90%;
             }
         }
