--- a/Frontend/src/app/components/microservice-runner/microservice-runner.component.html
+++ b/Frontend/src/app/components/microservice-runner/microservice-runner.component.html
@@ -1,21 +1,40 @@
-<div id="lists-container">
-    <mat-card id="available-microservices-card">
-        <mat-card-title>Available Microservices</mat-card-title>
-        <mat-card-content>
-            <mat-list role="list">
-                <mat-list-item *ngFor="let msName of (microservices | async).names" role="listitem">
-                    {{msName}}</mat-list-item>
-            </mat-list>
-        </mat-card-content>
-    </mat-card>
+<div id="content">
+    <div id="lists-container">
+        <mat-card id="available-microservices-card">
+            <mat-card-title>Available Microservices</mat-card-title>
+            <mat-card-content>
+                <mat-list role="list">
+                    <mat-list-item *ngFor="let msName of (microservices | async).names" role="listitem">
+                        {{msName}}</mat-list-item>
+                </mat-list>
+            </mat-card-content>
+        </mat-card>
 
-    <mat-card id="microservices-to-run-card">
-        <mat-card-title>Microservices To Run</mat-card-title>
-        <mat-card-content>
-            <mat-list role="list">
-                <mat-list-item *ngFor="let msName of (microservices | async).names" role="listitem">
-                    {{msName}}</mat-list-item>
-            </mat-list>
-        </mat-card-content>
-    </mat-card>
+        <mat-card id="microservices-to-run-card">
+            <mat-card-title>Microservices To Run</mat-card-title>
+            <mat-card-content>
+                <mat-list role="list">
+                    <mat-list-item *ngFor="let msName of (microservices | async).names" role="listitem">
+                        {{msName}}</mat-list-item>
+                </mat-list>
+            </mat-card-content>
+        </mat-card>
+
+        <!--TODO: Add '+', 'bin', 'reset microservices to run' and 'run' buttons-->
+    </div>
+
+    <div id="buttons-container">
+        <button class="tmp" type="submit" mat-raised-button color="primary" matTooltip="Add All"
+            matTooltipPosition="right">
+            <mat-icon>add</mat-icon>
+        </button>
+        <button class="tmp" type="submit" mat-raised-button color="primary" matTooltip="Delete All"
+            matTooltipPosition="right">
+            <mat-icon>delete</mat-icon>
+        </button>
+        <button class="tmp" type="submit" mat-raised-button color="primary" matTooltip="Run" matTooltipPosition="right">
+            <mat-icon>play_arrow</mat-icon>
+        </button>
+    </div>
+    <!-- TODO: distinc arrays[...new Set([...arr1,...arr2])] -->
 </div>
