--- a/Frontend/src/app/components/microservice-runner/microservice-runner.component.html
+++ b/Frontend/src/app/components/microservice-runner/microservice-runner.component.html
@@ -37,7 +37,8 @@
             (click)="clearMicroservicesToRun()">
             <mat-icon>delete</mat-icon>
         </button>
-        <button class="tmp" mat-raised-button color="primary" matTooltip="Run" matTooltipPosition="right">
+        <button class="tmp" mat-raised-button color="primary" matTooltip="Run" matTooltipPosition="right"
+            (click)="runMicroservices()">
             <mat-icon>play_arrow</mat-icon>
         </button>
     </div>
