Fixed debug names

--- a/Frontend/src/app/components/microservice-runner/microservice-runner.component.html
+++ b/Frontend/src/app/components/microservice-runner/microservice-runner.component.html
@@ -29,15 +29,15 @@
     </div>
 
     <div id="buttons-container">
-        <button class="tmp" mat-raised-button color="primary" matTooltip="Add All" matTooltipPosition="right"
+        <button mat-raised-button color="primary" matTooltip="Add All" matTooltipPosition="right"
             (click)="addAllMicroservicesToRun()">
             <mat-icon>add</mat-icon>
         </button>
-        <button class="tmp" mat-raised-button color="primary" matTooltip="Delete All" matTooltipPosition="right"
+        <button mat-raised-button color="primary" matTooltip="Delete All" matTooltipPosition="right"
             (click)="clearMicroservicesToRun()">
             <mat-icon>delete</mat-icon>
         </button>
-        <button class="tmp" mat-raised-button color="primary" matTooltip="Run" matTooltipPosition="right"
+        <button mat-raised-button color="primary" matTooltip="Run" matTooltipPosition="right"
             (click)="runMicroservices()">
             <mat-icon>play_arrow</mat-icon>
         </button>
