--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
     <div id="microservices">
         <mat-card id="microservices-card">
             <div id="path-chooser-container">
-                <ms-path-chooser id="path-chooser" (pathSubmitted)="demo($event)"></ms-path-chooser>
+                <ms-path-chooser id="path-chooser" (pathSubmitted)="pathChanged($event)"></ms-path-chooser>
             </div>
             <div id="microservice-runner-container">
                 <ms-microservice-runner id="microservice-runner" (runMicroservicesSubmitted)="runMicroservices($event)">
